--- a/admin/assets/sass/base/_helpers.scss
+++ b/admin/assets/sass/base/_helpers.scss
@@ -119,10 +119,10 @@ table {
     }
 }
 .table > :not(caption) > * > * {
-	padding: 0.8rem 0.4rem;
+	padding: 0.5rem 0.4rem !important;
 }
 .table-lg{
-	td, th{ padding:0.8rem 1rem; }
+	td, th{ padding:0.5rem 1rem; }
 }
 .table-light {
     color: #495058 !important;
